# ee-nginx

./: Cargo.toml  Dockerfile  README.md  build.sh
example/: conf  docker-compose.yml  run-nginx.sh
example/mnt/app/: index.html
example/mnt/app/foo/: index.html
example/mnt/hoge/: index.html
example/mnt/root/: index.html
example/mnt/secret/: index.html
example/mnt/static/: style.css
src/: error.rs  lib.rs  main.rs  output.rs  parse.rs  templates.rs  utils.rs
templates/: location.jinja  server.jinja
