[package]
name = "env-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
base64 = "0.21.0"
clap = { version = "4.2.5", features = ["derive"] }
openssl = "0.10.52"
url = "2.3.1"
